ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-app-ingress
  spec:
    ingressClassName: "nginx"
spec:
  tls:
  - hosts:
    - wisecow.local
    secretName: my-tls-new-secret
  rules:
  - host: wisecow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow
            port:
              number: 80
